--- a/planning/project_layout.tex
+++ b/planning/project_layout.tex
@@ -24,7 +24,7 @@
 \begin{itemize}
     \item take in input from user: (using command line input for draft)
     \begin{itemize}
-        \item Events - Adam
+        \item Events
         \begin{itemize}
             \item take in amount of events
             \item name of each event
@@ -34,7 +34,7 @@
             \begin{itemize}
             \item names - dictionary key: user #, value: object {schedule, name}
             \item schedules of people (how do we do this??)
-            \item research python library that allows to input calendar dates and times - Derek
+            \item research python library that allows to input calendar dates and times: use lettucemeet, alternatively tkinter
             \end{itemize}
     \end{itemize}
     \item see when all users are available
